--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20.17.17",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
